Potential fix for buttons on mobile.

--- a/styles.css
+++ b/styles.css
@@ -644,6 +644,7 @@ input, textarea {
     .button-container .btn {
         margin-top: 0;
         width: 100%;
+        align-items: center;
     }
 
 }
